fix flickering of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
 
     .main {
         max-width: 1200px;
+        width: min(1200px, 100%);
         margin-left: auto;
         margin-right: auto;
         flex-grow: 1;
